Revision history for Perl extension Wx.

0.60
	- Added wxSimpleHtmlListBox, wxColourPickerCtrl, wxFontPickerCtrl,
	  wxFilePickerCtrl, wxDirPickerCtrl, wxAboutDialog (2.7).

0.59  Fri Oct 20 22:05:45 CEST 2006
	- Fix packaging error in 0.58.

0.58  Thu Oct 19 21:54:04 CEST 2006
	- Added wxVScrolledWindow, wxVListBox, wxHtmlListBox.
	- Support wxWidgets RTL API (2.7).
	- Fix various bugs in wxStreams <=> Perl filehandles
	  interoperability.

0.57  Sun Aug 27 17:25:18 CEST 2006
	- Added wxHtmlDCRenderer (thanks to Mark Dootson).
	- Made the XS++ and overload preprocessors installable,
	  to be used by extensions.
	- Removed the demo and some samples, replaced by
	  Wx::Demo (a separate CPAN distribution).

0.56  Fri Aug 11 22:29:33 CEST 2006
	- Many thread-safety fixes.
	- wxMotif compatibility.
	- Build again under Windows.

0.55  Sun Aug  6 19:48:31 CEST 2006
	- Mac OS X 10.4 with latest Xcode compilation fixes.
	- Added wxTreebook, wxChoicebook, wxHyperlinkCtrl,
	  wxPowerEvent. (2.7)
	- Added Wx::SimpleApp.
	- Make the example in the SYNOPSIS actually show a window.

0.54  Sun Jul 16 14:26:52 CEST 2006
        - Compatibility with GCC 4.0 and 4.1.
	- Minor compatibility fixes for various wxWidgets releases.

0.53  Sun Jul  9 12:42:59 CEST 2006
        - wxWidgets 2.4 and wxMac compilation fixes.

0.52  Fri Jul  7 22:29:57 CEST 2006
	- Compilation fixes when wxMediaCtrl is disabled in wxWidgets.

0.51  Wed Jul  5 20:41:48 CEST 2006
	- Added Wx::Sound.
	- Compilation fixes for MSVC8 (thanks to John Ralls).
	- Bumped Alien::wxWidgets requirement to 0.15.

0.50  Fri Jun 23 11:51:17 CEST 2006
	- Fixed pod tests to work with older Test::Pod releases.

0.49_07  Sun Jun 18 18:06:05 CEST 2006
	- Compilation fixes for wxWidgets 2.5.3.
	- More additions for wxWidgets 2.7.x.

0.49_06  Sun May 21 22:34:21 CEST 2006
	- Compatibility with wxWidgets CVS HEAD.
	- Added various missing functions for wxWidgets 2.6.x
	  and 2.7.x.

0.49_05  Mon May  1 18:27:14 CEST 2006